💥 System Performance improved🔼❤️‍🩹. 🔥 Introduce multithreading🧵🧵 in the system(The UI thread is now less cluttered with work, focuses more on rendering and managing the UI elements👍️ hence a smooth🏄️ running🏃‍♂️ and no-latency 🚷 app/system). 🔥 Database⚾️ CRUD🛢️ operations now run🏃‍♂️ in separate concurrent🔱 threads🧵. 🔥 Scheduled concurrent service ⏳️⏳️ to query the database for data📊 changes🔄 and update⬆️ the collections hence the UI having the current state👍️ of the data📊 in the database⚾️. 🔥 UI got more smooth🏄️ and less latency(Thanks to the multi-threading.) 🔥 Realtime data📊(App/system shows data real time⌚️ thanks to the Scheduled Service).